...
								textStyle = style,
								cursorBrush = SolidColor(if (dark) Color(0xFFCED0D6) else Color.Black),
								onTextLayout = { layout.set(it); links.layout = it },
								modifier = Modifier.defaultMinSize(minWidth = 400.dp)
									.focusRequester(focus)
									.onFocusChanged { editorFocused = it.isFocused }
									.testTag("source-code")
									.onPreviewKeyEvent {
										if (it.type != KeyEventType.KeyDown) false
										else when {
											it.key == Key.B && (it.isMetaPressed || it.isCtrlPressed) -> {
												onNavigate(
													reference?.start ?: value.selection.end
...
